# GSAssistedTriangle

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  EXPERIMENT.md  README.md  pyproject.toml
configs/: baseline_triangle.yaml  gs_assisted_smoke.yaml  gs_assisted_v2.yaml
design_log/: 2026-07-01-selective-rank-aware-conversion.md  2026-07-01-v3-decoupled-geometry-gate.md  README.md
gs_assisted/: __init__.py  compositing.py  convert_gs_to_triangles.py  gs_backend.py  progress.py  render_gs_assisted.py  schedule.py  train_gs_assisted.py
gs_assisted/convert/: __init__.py  geometry.py
gs_assisted/diagnostics/: __init__.py  metrics.py
gs_assisted/mixed_renderer/: __init__.py
gs_assisted/residual_gs/: __init__.py  insertion.py  policy.py  residual_mask.py
patches/: README.md
scripts/: collect_results.py  run_baseline.ps1  run_convert.ps1  run_gs_assisted.ps1  run_scene.sh  setup_env.ps1
tests/: test_compositing.py  test_convert_geometry.py  test_metrics.py  test_policy.py  test_residual_mask.py  test_schedule.py
